--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
             <input class="searchControl" type="text" placeholder="City Name or ZipCode" id="searchInput">
             <button class="searchControl" id="searchBtn">Search</button>
         </div>
-            <div id="weatherContainer">
-                <div id="weatherDescription">
-                    <h1 id="cityHeader"></h1>
-                    <div id="weatherMain">
-                        <div id="temperature"></div>
-                        <div id="weatherDescriptionHeader"></div>
-                        <div><img id="documentIconImg"></div>
-                    </div>
-                    <hr>
+            <p id="weatherContainer">
+                <p id="weatherDescription">
+                    <h3 id="cityHeader"></h3>
+                    <span id="weatherMain">
+                        <span id="temperature"></span>
+                        <span id="weatherDescriptionHeader"></span>
+                        <span><img id="documentIconImg"></span>
+                    </span>
+            
                 <div id="windSpeed" class="bottomDetails"></div>
                 <div id="humidity" class="bottomDetails"></div>
-            </div>
+                </span>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
