--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Rain or Shine</title>
+        <img src="rainorshineicon.jpeg" alt="rainorshine">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -16,7 +17,6 @@
                     <span id="weatherMain">
                         <span id="temperature"></span>
                         <span id="weatherDescriptionHeader"></span>
-                        <span><img id="documentIconImg"></span>
                     </span>
             
                 <div id="windSpeed" class="bottomDetails"></div>
