--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Rain or Shine</title>
         <img src="rainorshineicon.jpeg" alt="rainorshine">
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id= "searchContainer">
@@ -14,18 +15,14 @@
             </form>
             
         </div>
-            <p id="weatherContainer">
-                <p id="weatherDescription">
-                    <h3 id="cityHeader"></h3>
-                    <img class="weatherLogo hidden">
-                    <span id="weatherMain">
-                        <span id="temperature"></span>
-                        <span id="weatherDescriptionHeader"></span>
-                    </span>
-            
-                <div id="windSpeed" class="bottomDetails"></div>
-                <div id="humidity" class="bottomDetails"></div>
-                </span>
+        <div class="weatherDescription hidden">
+            <h3 id="cityHeader"></h3>
+            <img class="weatherLogo">
+            <hr width="40%">
+            <span id="temperature"></span>
+            <span id="weatherDescriptionHeader"></span>
+            <div id="windSpeed" class="bottomDetails"></div>
+            <div id="humidity" class="bottomDetails"></div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
