added lang attribute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
         <title>Rain or Shine</title>
         <img src="rainorshineicon.jpeg" alt="rainorshine">
@@ -17,7 +17,7 @@
         </div>
         <div class="weatherDescription hidden">
             <h3 id="cityHeader"></h3>
-            <img class="weatherLogo">
+            <img class="weatherLogo" alt="logo">
             <hr width="40%">
             <span id="temperature"></span>
             <span id="weatherDescriptionHeader"></span>
