fixed required changes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div id= "searchContainer">
             <h1 class="appTitle">Rain or Shine</h1>
             <form id="weatherForm">
-                <input class="searchControl" type="text" placeholder="City Name" id="searchInput" name="searchInput" aria-label="City and State Name or ZipCode">
-                <input class="searchControl" type="text" placeholder="State Name" id="stateInput" name="stateInput" aria-label="State Name">
+                <input class="searchControl" type="text" placeholder="City Name" id="searchInput" name="searchInput" required aria-label="City and State Name or ZipCode">
+                <input class="searchControl" type="text" placeholder="State Name" id="stateInput" name="stateInput" required aria-label="State Name">
                 <input class="searchControl" id="searchBtn" type="submit" value="Search">
             </form>
             
@@ -24,11 +24,14 @@
         <div class="weatherDescription hidden">
             <h3 id="cityHeader">City</h3>
             <img src="climateLogo" class="weatherLogo" alt="logo">
+            <br>
             <span id="temperature"></span>
             <span id="weatherDescriptionHeader"></span>
             <div id="windSpeed" class="bottomDetails"></div>
             <div id="humidity" class="bottomDetails"></div>
         </div>
+        <br>
+        <div class="errorMessage hidden">There was a problem!</div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
