changed alt text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <title>Rain or Shine</title>
     </head>
     <body>
-        <img src="rainorshineicon.jpeg" alt="app logo" >
+        <img src="rainorshineicon.jpeg" alt="Rain or Shine Weather App" >
         <!-- <div class="loader"></div> -->
         <div id= "searchContainer">
             <h1 class="appTitle">Rain or Shine</h1>
