--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="humidity" class="bottomDetails"></div>
         </div>
         <br>
-        <div class="errorMessage hidden">There was a problem!</div>
+        <div class="errorMessage hidden"></div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
