--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" 
             rel="stylesheet">
-            <title>Rain or Shine</title>
+        <script src="https://kit.fontawesome.com/0993bc6ed6.js" crossorigin="anonymous"></script>
+        <title>Rain or Shine</title>
     </head>
     <body>
         <img src="rainorshineicon.jpeg" alt="Rain or Shine Weather App" >
@@ -15,23 +16,23 @@
         <div id= "searchContainer">
             <h1 class="appTitle">Rain or Shine</h1>
             <form id="weatherForm">
-                <input class="searchControl" type="text" placeholder="City Name" id="searchInput" name="searchInput" required aria-label="City and State Name or ZipCode">
-                <input class="searchControl" type="text" placeholder="State Name" id="stateInput" name="stateInput" required aria-label="State Name">
+                <input class="searchControl" type="text" placeholder="chicago, new york, etc." id="searchInput" name="searchInput" required aria-label="City and State Name or ZipCode">
+                <input class="searchControl" type="text" placeholder="IL, NY, etc." id="stateInput" name="stateInput" required aria-label="State Name">
                 <input class="searchControl" id="searchBtn" type="submit" value="Search">
             </form>
             
         </div>
-        <div class="weatherDescription hidden">
+        <section class="weatherDescription hidden">
             <h2 id="cityHeader">City</h2>
             <img src="climateLogo" class="weatherLogo" alt="logo">
-            <br>
             <span id="temperature"></span>
             <span id="weatherDescriptionHeader"></span>
             <div id="windSpeed" class="bottomDetails"></div>
             <div id="humidity" class="bottomDetails"></div>
-        </div>
-        <br>
-        <div class="errorMessage hidden"></div>
+            <div id="description" class="description"></div> 
+            <i class="icon fa fa-thermometer-empty" style="font-size: 30px"></i>
+        </section>
+        <section class="errorMessage hidden"></section>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
